<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary70"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewEntryExpense">

    <TextView
        android:id="@+id/head_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/head_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:typeface="sans" />

    <EditText
        android:id="@+id/entry_name"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="up to 15 characters"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:typeface="sans" />


    <TextView
        android:id="@+id/head_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/head_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:typeface="sans" />

    <EditText
        android:id="@+id/entry_date"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_below="@+id/entry_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:editable="true"
        android:hint="yyyy-mm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:typeface="sans"
        tools:ignore="Deprecated" />


    <TextView
        android:id="@+id/head_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_date"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/head_charge"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:typeface="sans" />

    <EditText
        android:id="@+id/entry_charge"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_below="@+id/entry_date"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="non-negative in Canadian dollars"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:typeface="sans" />


    <TextView
        android:id="@+id/head_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_charge"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/head_comment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:typeface="sans" />

    <EditText
        android:id="@+id/entry_comment"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_below="@+id/entry_charge"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="up to 20 characters"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:typeface="sans" />

    <Button
        android:id="@+id/button_save_entry"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="37dp"
        android:text="@string/button_save_entry" />


</RelativeLayout>

